Form validations and Spring

--- a/gamestore-spring/pom.xml
+++ b/gamestore-spring/pom.xml
@@ -54,6 +54,13 @@
       <artifactId>spring-data-jpa</artifactId>
       <version>3.1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+
+	  <dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-validation</artifactId>
+	  </dependency>
+
 
   </dependencies>
 
